--- a/course-content-chemistry-est-2.html
+++ b/course-content-chemistry-est-2.html
@@ -459,6 +459,16 @@
     <script src="lib/counterup/counterup.min.js"></script>
     <script src="lib/owlcarousel/owl.carousel.min.js"></script>
 
+    <!-- Firebase SDK -->
+    <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-auth-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-firestore-compat.js"></script>
+    
+    <!-- Firebase Configuration and Course Access -->
+    <script src="js/firebase-config.js"></script>
+    <script src="js/firebase-course-access.js"></script>
+    <script src="js/firebase-user-management.js"></script>
+
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
 
