--- a/course-content-biology-est-1.html
+++ b/course-content-biology-est-1.html
@@ -120,11 +120,11 @@
                         </div>
                         <div class="card-body">
                             <ul class="list-unstyled mb-0">
-                                <li><a href="#" class="text-primary"><i class="fa fa-file-alt mr-2"></i>Assignment 1</a></li>
-                                <li><a href="#" class="text-primary"><i class="fa fa-file-alt mr-2"></i>Assignment 2</a></li>
-                                <li><a href="#" class="text-primary"><i class="fa fa-file-alt mr-2"></i>Assignment 3</a></li>
-                                <li><a href="#" class="text-primary"><i class="fa fa-file-alt mr-2"></i>Assignment 4</a></li>
-                                <li><a href="#" class="text-primary"><i class="fa fa-file-alt mr-2"></i>Assignment 5</a></li>
+                                <li><a href="https://drive.google.com/file/d/1ABC123DEF456GHI789JKL012MNO345PQR678STU901VWX234YZ567890/view?usp=sharing" target="_blank" class="text-primary"><i class="fa fa-file-alt mr-2"></i>Assignment 1</a></li>
+                                <li><a href="https://drive.google.com/file/d/2BCD234EFG567HIJ890KLM123NOP456QRS789TUV012WXY345Z678901/view?usp=sharing" target="_blank" class="text-primary"><i class="fa fa-file-alt mr-2"></i>Assignment 2</a></li>
+                                <li><a href="https://drive.google.com/file/d/3CDE345FGH678IJK901LMN234OPQ567RST890UVW123XYZ456A789012/view?usp=sharing" target="_blank" class="text-primary"><i class="fa fa-file-alt mr-2"></i>Assignment 3</a></li>
+                                <li><a href="https://drive.google.com/file/d/4DEF456GHI789JKL012MNO345PQR678STU901VWX234YZ567890ABC123/view?usp=sharing" target="_blank" class="text-primary"><i class="fa fa-file-alt mr-2"></i>Assignment 4</a></li>
+                                <li><a href="https://drive.google.com/file/d/5EFG567HIJ890KLM123NOP456QRS789TUV012WXY345Z678901BCD234/view?usp=sharing" target="_blank" class="text-primary"><i class="fa fa-file-alt mr-2"></i>Assignment 5</a></li>
                             </ul>
                         </div>
                     </div>
