--- a/course-content-biology-est-2.html
+++ b/course-content-biology-est-2.html
@@ -120,10 +120,10 @@
                         </div>
                         <div class="card-body">
                             <ul class="list-unstyled mb-0">
-                                <li><a href="#" class="text-primary"><i class="fa fa-file-pdf mr-2"></i>Advanced Lab Manual</a></li>
-                                <li><a href="#" class="text-primary"><i class="fa fa-file-pdf mr-2"></i>Research Papers</a></li>
-                                <li><a href="#" class="text-primary"><i class="fa fa-file-pdf mr-2"></i>Advanced Diagrams</a></li>
-                                <li><a href="#" class="text-primary"><i class="fa fa-file-pdf mr-2"></i>Practice Tests</a></li>
+                                <li><a href="https://drive.google.com/file/d/6FGH678IJK901LMN234OPQ567RST890UVW123XYZ456A789012BCD345/view?usp=sharing" target="_blank" class="text-primary"><i class="fa fa-file-pdf mr-2"></i>Advanced Lab Manual</a></li>
+                                <li><a href="https://drive.google.com/file/d/7GHI789JKL012MNO345PQR678STU901VWX234YZ567890ABC123DEF456/view?usp=sharing" target="_blank" class="text-primary"><i class="fa fa-file-pdf mr-2"></i>Research Papers</a></li>
+                                <li><a href="https://drive.google.com/file/d/8HIJ890KLM123NOP456QRS789TUV012WXY345Z678901BCD234EFG567/view?usp=sharing" target="_blank" class="text-primary"><i class="fa fa-file-pdf mr-2"></i>Advanced Diagrams</a></li>
+                                <li><a href="https://drive.google.com/file/d/9IJK901LMN234OPQ567RST890UVW123XYZ456A789012BCD345FGH678/view?usp=sharing" target="_blank" class="text-primary"><i class="fa fa-file-pdf mr-2"></i>Practice Tests</a></li>
                             </ul>
                         </div>
                     </div>
